tests/istio_testcases/example_policies/istio-ingress-test/resources/istio-ingress-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-ingressgateway
spec:
  selector:
    matchLabels:
      app: my-gateway-controller
  template:
    metadata:
      annotations:
        inject.istio.io/templates: gateway
      labels:
        app: my-gateway-controller
    spec:
      containers:
      - name: istio-proxy
        image: auto
