tests/istio_testcases/example_policies/istio-ingress-test/resources/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: details
  namespace: prod
  labels:
    app: details
    service.istio.io/canonical-name: details
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: details
---
apiVersion: v1
kind: Service
metadata:
  name: ratings
  namespace: prod
  labels:
    app: ratings
    service.istio.io/canonical-name: ratings
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: ratings
---
apiVersion: v1
kind: Service
metadata:
  name: reviews
  namespace: qa
  labels:
    app: reviews
    service.istio.io/canonical-name: reviews
spec:
  ports:
  - port: 7777
    name: http
  selector:
    app: reviews
---
apiVersion: v1
kind: Service
metadata:
  name: productpage
  labels:
    app: productpage
    service: productpage
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: productpage
